--- a/package.html
+++ b/package.html
@@ -548,7 +548,9 @@
         <div class="package-one-first">
           <h2>Offbeat Holidays</h2>
           <div class="package-box-button">
-            <button class="btn">Book Now</button>
+            <a href="spritualpack.html">
+              <button class="btn">Book Now</button>
+            </a>
           </div>
         </div>
         <div class="carousel-container">
