--- a/spritualpack.html
+++ b/spritualpack.html
@@ -614,7 +614,61 @@
                   >
                 </div>
                 <div class="diamond-box-button">
-                  <a href="bookTheHotel.html">
+                  <a href="odishatourpack.html">
+                    <button class="btn btn-danger">
+                    INQUIRE NOW</button>
+                  </a>
+                </div>
+              </div>
+              <div class="para">
+                <p>
+                  The Tour will start from Bhubneswar and will be ending in
+                  Bhubneswar. Odisha is a land of devotion we will find the
+                  Jagannath Temple which is full of amazing and mesmerizing
+                  beaches which really attract each and every one.
+                </p>
+              </div>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Breakfast</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Lunch</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Dinner</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Transportation</span>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="package-img">
+              <img src="image/hotel/1.avif" alt="" />
+            </div>
+            <div class="package-content">
+              <h4>Odisha Tour Package</h4>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-inr"></i>
+                    <span>5,000</span>
+                  </span>
+                  <span class="package-days">
+                    <i class="fa fa-star-o"></i>
+                    6 Nights and 7 Days</span
+                  >
+                </div>
+                <div class="diamond-box-button">
+                  <a href="odishatourpack.html">
                     <button class="btn btn-danger">INQUIRE NOW</button>
                   </a>
                 </div>
@@ -667,60 +721,7 @@
                   >
                 </div>
                 <div class="diamond-box-button">
-                  <a href="bookTheHotel.html">
-                    <button class="btn btn-danger">INQUIRE NOW</button>
-                  </a>
-                </div>
-              </div>
-              <div class="para">
-                <p>
-                  The Tour will start from Bhubneswar and will be ending in
-                  Bhubneswar. Odisha is a land of devotion we will find the
-                  Jagannath Temple which is full of amazing and mesmerizing
-                  beaches which really attract each and every one.
-                </p>
-              </div>
-              <div class="diamond-box-tags">
-                <div class="diamond-box-tags">
-                  <span class="diamond">
-                    <i class="fa fa-check"></i>
-                    <span>Breakfast</span>
-                  </span>
-                  <span class="diamond">
-                    <i class="fa fa-check"></i>
-                    <span>Lunch</span>
-                  </span>
-                  <span class="diamond">
-                    <i class="fa fa-check"></i>
-                    <span>Dinner</span>
-                  </span>
-                  <span class="diamond">
-                    <i class="fa fa-check"></i>
-                    <span>Transportation</span>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="package-box">
-            <div class="package-img">
-              <img src="image/hotel/1.avif" alt="" />
-            </div>
-            <div class="package-content">
-              <h4>Odisha Tour Package</h4>
-              <div class="diamond-box-tags">
-                <div class="diamond-box-tags">
-                  <span class="diamond">
-                    <i class="fa fa-inr"></i>
-                    <span>5,000</span>
-                  </span>
-                  <span class="package-days">
-                    <i class="fa fa-star-o"></i>
-                    6 Nights and 7 Days</span
-                  >
-                </div>
-                <div class="diamond-box-button">
-                  <a href="bookTheHotel.html">
+                  <a href="odishatourpack.html">
                     <button class="btn btn-danger">INQUIRE NOW</button>
                   </a>
                 </div>
