--- a/hotel&package.html
+++ b/hotel&package.html
@@ -551,7 +551,7 @@
                     5,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
@@ -563,7 +563,7 @@
                     10,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
@@ -575,7 +575,7 @@
                     15,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
@@ -587,7 +587,7 @@
                     5,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
@@ -599,7 +599,7 @@
                     10,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
@@ -611,7 +611,7 @@
                     15,000
                   </p>
                   <div class="travel-view-btn">
-                    <a href="packagedetails.html">Book Now</a>
+                    <a href="package.html">Book Now</a>
                   </div>
                 </div>
               </div>
