--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <div id="wrapper">
       <header class="">
         <nav class="navbar py-3 navbar-expand-lg">
-          <div class="container-fluid navbar-area navbar-index">
-            <a class="navbar-brand navbar-img-index" href="index.html">
+          <div class="container-fluid navbar-area">
+            <a class="navbar-brand" href="index.html">
               <img src="image/navbar/logo.png" width="100px" alt="" />
             </a>
             <button
@@ -30,24 +30,73 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div
-              class="collapse navbar-collapse navbar-collapse-index"
-              id="navbarSupportedContent"
-            >
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html"> Home </a>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Packages
+                  </a>
+                  <div
+                    class="dropdown-menu navbar-package"
+                    aria-labelledby="navbarDropdown"
+                  >
+                    <div class="row" style="width: 250px; height: auto">
+                      <div class="col-12 navbar-column">
+                        <a class="dropdown-item" href="#">Delhi</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Mumbai</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Uttar Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Tamil Nadu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Karnataka</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Gujarat</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Kerala</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Bihar</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Rajasthan</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Haryana</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Assam</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Punjab</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Himachal Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Mumbai</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Uttar Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Tamil Nadu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Karnataka</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Gujarat</a>
+                      </div>
+                    </div>
+                  </div>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About Us</a>
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="contact.html"> Hotel </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="hotel&package.html"> Packages </a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="contact.html"> Blog </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="hotel&package.html"> Hotels</a>
-                </li>
-                <li class="nav-item">
+                <li class="nav-item dropdown">
                   <a class="nav-link" href="contact.html"> Contact Us </a>
                 </li>
               </ul>
@@ -55,96 +104,6 @@
           </div>
         </nav>
       </header>
-
-      <section class="travel-view py-4">
-        <div class="container container-index">
-          <div class="row gap-4">
-            <div
-              id="carousel_indicators"
-              class="carousel slide"
-              data-bs-ride="carousel"
-              data-interval="1000"
-            >
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="0"
-                  class=""
-                  aria-label="Slide 0"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="1"
-                  class="active"
-                  aria-label="Slide 1"
-                  aria-current="true"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="2"
-                  class=""
-                  aria-label="Slide 2"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="3"
-                  class=""
-                  aria-label="Slide 3"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="4"
-                  class=""
-                  aria-label="Slide 4"
-                ></button>
-              </div>
-              <div class="carousel-inner carousel-inner-index">
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-1.png"
-                    class="d-block w-100"
-                    alt="Adventure Awaits"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-2.png"
-                    class="d-block w-100"
-                    alt="Tsangmo Lake 2"
-                  />
-                </div>
-                <div class="carousel-item active">
-                  <img
-                    src="image/carousel/mover-bg-3.png"
-                    class="d-block w-100"
-                    alt="Udaipur"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-4.png"
-                    class="d-block w-100"
-                    alt="Goa"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-5.png"
-                    class="d-block w-100"
-                    alt="Gujarat"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <section class="contact-us-container">
         <div class="contact-us-box">
           <div class="contact-us-info">
@@ -172,7 +131,7 @@
               <div class="line-2"></div>
               <div class="mail-id">
                 <i class="fa fa-envelope"></i>
-                <span>atulya@hotels.co.in</span>
+                <span>nitin@brilltech.co.in</span>
               </div>
             </div>
           </div>
@@ -239,94 +198,15 @@
           </div>
         </div>
       </section>
-
-      <section class="travel-view py-4">
-        <div class="container container-index">
-          <div class="row gap-4">
-            <div
-              id="carousel_indicators"
-              class="carousel slide"
-              data-bs-ride="carousel"
-              data-interval="1000"
-            >
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="0"
-                  class=""
-                  aria-label="Slide 0"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="1"
-                  class="active"
-                  aria-label="Slide 1"
-                  aria-current="true"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="2"
-                  class=""
-                  aria-label="Slide 2"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="3"
-                  class=""
-                  aria-label="Slide 3"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel_indicators"
-                  data-bs-slide-to="4"
-                  class=""
-                  aria-label="Slide 4"
-                ></button>
-              </div>
-              <div class="carousel-inner carousel-inner-index">
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-1.png"
-                    class="d-block w-100"
-                    alt="Adventure Awaits"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-2.png"
-                    class="d-block w-100"
-                    alt="Tsangmo Lake 2"
-                  />
-                </div>
-                <div class="carousel-item active">
-                  <img
-                    src="image/carousel/mover-bg-3.png"
-                    class="d-block w-100"
-                    alt="Udaipur"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-4.png"
-                    class="d-block w-100"
-                    alt="Goa"
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="image/carousel/mover-bg-5.png"
-                    class="d-block w-100"
-                    alt="Gujarat"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <section class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.080528425026!2d77.45668341504988!3d28.597360892422756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce4ffc5555571%3A0x3e3a657d47c5ad63!2sBrilltech%20Engineers%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1567157574478!5m2!1sen!2sin"
+          width="100%"
+          height="350"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+        ></iframe>
       </section>
       <footer>
         <div class="footer-container">
@@ -359,8 +239,8 @@
             <h5>Help</h5>
             <a href="">FAQs</a>
             <a href="">About newzealand.com</a>
-            <a href="">Adding your business </a>
-            <a href="">Linking to newzealand</a>
+            <a href="">Adding your business and deals</a>
+            <a href="">Linking to newzealand.com</a>
             <a href="">Terms of use</a>
             <a href="">Privacy Policy</a>
             <a href="">Cookies</a>
