done changes in hotel details page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                   <a class="nav-link" href="hotel&package.html"> Hotels</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="blog.html"> Blog</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="contact.html"> Contact Us </a>
                 </li>
               </ul>
