--- a/about.html
+++ b/about.html
@@ -33,6 +33,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
+                  <a class="nav-link" href="index.html"> Home </a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="about.html"> About </a>
+                </li>
+                <li class="nav-item dropdown">
                   <a
                     class="nav-link"
                     href="#"
