--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"> Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> About Us</a>
+                </li>
                 <li class="nav-item dropdown">
                   <a
                     class="nav-link"
