--- a/bookTheHotel.html
+++ b/bookTheHotel.html
@@ -745,16 +745,20 @@
                   </p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
-                      <h3>Persons</h3> 
-                      <span class="diamond">
-                        <i class="fa fa-user"></i>
-                        <span>2</span>
-                      </span>
-                      <h3>Price</h3>
-                      <span class="diamond">
-                        <i class="fa fa-inr"></i>
-                        <span>5,000</span>
-                      </span>
+                      <div>
+                        <h3>Persons</h3> 
+                        <span class="diamond">
+                          <i class="fa fa-user"></i>
+                          <span>2</span>
+                        </span>
+                      </div>
+                      <div>
+                        <h3>Price</h3>
+                        <span class="diamond">
+                          <i class="fa fa-inr"></i>
+                          <span>5,000</span>
+                        </span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -794,16 +798,20 @@
                   </p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
-                      <h3>Persons</h3> 
-                      <span class="diamond">
-                        <i class="fa fa-user"></i>
-                        <span>2</span>
-                      </span>
-                      <h3>Price</h3>
-                      <span class="diamond">
-                        <i class="fa fa-inr"></i>
-                        <span>5,000</span>
-                      </span>
+                      <div>
+                        <h3>Persons</h3> 
+                        <span class="diamond">
+                          <i class="fa fa-user"></i>
+                          <span>2</span>
+                        </span>
+                      </div>
+                      <div>
+                        <h3>Price</h3>
+                        <span class="diamond">
+                          <i class="fa fa-inr"></i>
+                          <span>5,000</span>
+                        </span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -844,16 +852,20 @@
                   </p>
                   <div class="check-hotel-container">
                     <div class="check-hotel-box">
-                      <h3>Persons</h3> 
-                      <span class="diamond">
-                        <i class="fa fa-user"></i>
-                        <span>2</span>
-                      </span>
-                      <h3>Price</h3>
-                      <span class="diamond">
-                        <i class="fa fa-inr"></i>
-                        <span>5,000</span>
-                      </span>
+                      <div>
+                        <h3>Persons</h3> 
+                        <span class="diamond">
+                          <i class="fa fa-user"></i>
+                          <span>2</span>
+                        </span>
+                      </div>
+                      <div>
+                        <h3>Price</h3>
+                        <span class="diamond">
+                          <i class="fa fa-inr"></i>
+                          <span>5,000</span>
+                        </span>
+                      </div>
                     </div>
                   </div>
                 </div>
