--- a/hotel&package.html
+++ b/hotel&package.html
@@ -15,7 +15,7 @@
     <div id="wrapper">
       <header class="">
         <nav class="navbar py-3 navbar-expand-lg">
-          <!-- <div class="container-fluid navbar-area">
+          <div class="container-fluid navbar-area">
             <a class="navbar-brand" href="index.html">
               <img src="image/navbar/logo.png" width="100px" alt="" />
             </a>
@@ -51,37 +51,6 @@
                     <div class="row" style="width: 250px; height: auto">
                       <div class="col-12 navbar-column">
                         <a class="dropdown-item" href="#">Delhi</a>
-                        <ul class="submenu dropdown-menu">
-                          <li>
-                            <a class="dropdown-item" href="#">Submenu item 1</a>
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="#">Submenu item 2</a>
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="#"
-                              >Submenu item 3 &raquo;
-                            </a>
-                            <ul class="submenu dropdown-menu">
-                              <li>
-                                <a class="dropdown-item" href="#"
-                                  >Multi level 1</a
-                                >
-                              </li>
-                              <li>
-                                <a class="dropdown-item" href="#"
-                                  >Multi level 2</a
-                                >
-                              </li>
-                            </ul>
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="#">Submenu item 4</a>
-                          </li>
-                          <li>
-                            <a class="dropdown-item" href="#">Submenu item 5</a>
-                          </li>
-                        </ul>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Mumbai</a>
                         <div class="dropdown-divider"></div>
@@ -132,7 +101,7 @@
                 </li>
               </ul>
             </div>
-          </div> -->
+          </div>
         </nav>
       </header>
       <section class="travel-view py-4">
