--- a/hotel&package.html
+++ b/hotel&package.html
@@ -91,7 +91,61 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="contact.html"> Hotel </a>
+                  <a
+                    class="nav-link"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Hotel
+                  </a>
+                  <div
+                    class="dropdown-menu navbar-package"
+                    aria-labelledby="navbarDropdown"
+                  >
+                    <div class="row" style="width: 250px; height: auto">
+                      <div class="col-12 navbar-column">
+                        <a class="dropdown-item" href="#">Delhi</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Mumbai</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Uttar Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Tamil Nadu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Karnataka</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Gujarat</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Kerala</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Bihar</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Rajasthan</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Haryana</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Assam</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Punjab</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Himachal Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Mumbai</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Uttar Pradesh</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Tamil Nadu</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Karnataka</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Gujarat</a>
+                      </div>
+                    </div>
+                  </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="contact.html"> Blog </a>
